# sdf-validator

./: LICENSE  README.md  flake.nix  pyproject.toml  requirements.txt
examples/: AirplaneCrash_v2.1.json  JudicialResponse_v3.3.json
sdfval/: __init__.py  __main__.py  core.py  sdf.py
