[tool.poetry]
name = "sdfval"
version = "0.1.2"
description = ""
authors = ["Brendon Boldt <bboldt@cs.cmu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
mypy = "^1.4.1"
